# App-AudioCapture

./: .appveyor.yml  .gitignore  CMakeLists.txt  Findliblsl.cmake  LICENSE  MacOSXBundleInfo.plist  README.md  appveyor.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
.github/workflows/: cppcmake.yml
cmake/: MacOSXBundleInfo.plist
